<resources>
    <string name="app_name">SLR Toolkit</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_label_projects">Projects Fragment</string>
    <string name="fragment_label_add_project">Add Project Fragment</string>
    <string name="textview_view_project_metadata">Project Metadata</string>
    <string name="textview_add_project">Add Project</string>
    <string name="textview_no_project">No projects.</string>
    <string name="fab_add_project">Add SLR Project</string>
    <string name="textinput_token">Token</string>
    <string name="textinput_url">Repository URL</string>
    <string name="textinput_username">Username</string>
    <string name="toast_empty_url">Please leave URL not empty.</string>
    <string name="textview_credentials">Credentials</string>
    <string name="textview_git_settings">Git Settings</string>
    <string name="textinput_git_name">Name</string>
    <string name="textinput_git_email">Email</string>
    <string name="button_clone_project">Clone Project</string>
    <string name="button_create_project">Create Local Project</string>
    <string name="button_add_project">Add Project</string>
    <string name="button_add_project_file">Add Project file</string>
    <string name="button_add_bib">Add Bibliography</string>
    <string name="button_add_taxonomy">Add taxonomy</string>
    <string name="button_add_default_file">Add default file</string>
    <string name="button_edit_project">Edit Project Metadata</string>
    <string name="button_add_file">Choose file</string>
    <string name="textinput_name">Project Name</string>
    <string name="toast_empty_name">Please leave \'project name\' not empty.</string>
    <string name="snackbar_undo">Undo</string>
    <string name="progressbutton_onloading">Please wait…</string>
    <string name="progressbutton_onfailed">Retry clone Project.</string>
    <string name="progressbutton_succeeded">Next</string>
    <string name="textview_no_entries">No entries</string>
    <string name="textview_no_taxonomies">No taxonomies</string>
    <string name="textview_no_taxonomy_entries">No entries for the taxonomy.</string>
    <string name="textview_no_entries_to_classify">No entries to classify</string>
    <string name="textview_no_entries_to_filter">No entries to filter</string>
    <string name="entry_detail_heading_authors">Authors</string>
    <string name="entry_detail_heading_year">Year</string>
    <string name="entry_detail_heading_month">Month</string>
    <string name="entry_detail_heading_abstract">Abstract</string>
    <string name="entry_detail_heading_doi">DOI</string>
    <string name="entry_detail_heading_keywords">Keywords</string>
    <string name="entry_detail_heading_published">Published in</string>
    <string name="button_classify">Classify</string>
    <string name="button_filter">Filter</string>
    <string name="button_pull">Pull</string>
    <string name="button_commit">Commit</string>
    <string name="button_entries_by_taxonomy">Entries by taxonomy</string>
    <string name="button_all_entries">All entries</string>
    <string name="button_analyze">Analyze</string>
    <string name="button_keep">Keep</string>
    <string name="button_discard">Discard</string>
    <string-array name="chart_array">
        <item>Barchart</item>
        <item>Bubblechart</item>
    </string-array>
    <string name="button_okay">Okay</string>
    <string name="taxonomy_select_description">Please select the child taxonomies you want to display.</string>
    <string name="entries_for_taxonomy">Entries for:</string>
    <string name="no_matches">No Matches</string>
    <string name="test_text">This is some text to test</string>
    <string name="button_delete">Delete</string>
    <string name="button_delete_confirm">Really?</string>
    <string name="button_search">Search</string>
    <string name="image_arrow">Arrow</string>
    <string name="error_clone_failed">Error during cloning the repository.</string>
    <string name="toast_pull_succeeded">Repo was pulled successfully.</string>
    <string name="error_pull_failed">Error during pulling the repository.</string>
    <string name="error_commit_failed">Error during committing.</string>
    <string name="error_commit_git_name">Please set your Git name.</string>
    <string name="error_commit_git_email">Please set your Git email.</string>
    <string name="toast_commit_succeeded">Current status has been committed.</string>
    <string name="error_push_failed">Error during pushing to remote repository.</string>
    <string name="button_push">Push</string>
    <string name="toast_push_succeeded">Commits have been pushed to remote repository.</string>
    <string name="error_git_no_changes">There are no changes to commit.</string>
    <string name="textinput_abstract">Abstract</string>
    <string name="authors">Authors</string>
    <string name="manage_taxonomy">Manage Taxonomy</string>
    <string name="create_keyword">Create keyword</string>
    <string name="name_new_keyword">Enter name for a new keyword</string>
    <string name="create_new_keyword">Create new keyword</string>
    <string name="create_new_author">Create new author</string>
    <string name="enter_a_name_of_author">Enter a name of author</string>
    <string name="create_author">Create author</string>
    <string name="enter_affilation_of_author">Enter affilation of author</string>
    <string name="enter_email_of_author">Enter email of author</string>
    <string name="add_git_repository">Add git repository</string>
    <string name="enter_git_username">Enter git username</string>
    <string name="enter_token">Enter token</string>
    <string name="enter_email_for_git">Enter email for git</string>
    <string name="enter_repo_url_on_git">Enter repo url on git</string>
    <string name="button_add_project_from_git">Add Project From Git</string>
    <string name="import_bibtex">Import Bibtex</string>
    <string name="paste_bibtex">Paste your bibtex code here</string>
    <string name="btn_import_bibtex">Import Bibtex</string>
    <string name="close">Close</string>
    <string name="fab_add_taxonomy">Add Taxonomy Item</string>
    <string name="enter_name_of_taxonomy_entry">Enter name of taxonomy entry</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="collapse_state">collapse state</string>
    <string name="or">or</string>
    <string name="import_from_file">Import from File..</string>

</resources>